[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
rust-version = "1.72.0"
edition = "2018"
repository = "https://github.com/metamaxo/rust-book"

[workspace.dependencies]
rust-book-minigrep = { path = "crates/minigrep" }
rust-book-pig-latin-converter = { path = "crates/pig-latin-converter" }
rust-book-pig-example-1 = { path = "crates/example-1" }
rust-book-pig-example-2 = { path = "crates/example-2" }

